src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_class_public.deca
// Description:
//    tests de programme incorrect class protected
//
// Resultats:
//    Ligne 12 : Erreur (oubli condition)
//    
//
// Historique:
//    cree le 04/01/2023

class A{
    public int x = 8;
}